# reaper-rs

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DOCS.md  FEATURES.md  INSTALL.md  PUBLISHING.md  README.md  RELEASE_STATUS.md  RELEASE_TESTS.md  ROADMAP.md  SECURITY.md  TODO.md  make_executable.sh  test_build.sh  test_install.sh
.github/workflows/: main.yml
reap/: Cargo.toml
reap/src/: aur.rs  backend.rs  cli.rs  config.rs  core.rs  flatpak.rs  gpg.rs  hooks.rs  lib.rs  main.rs  pacman.rs  tui.rs  utils.rs
reaper-core/: Cargo.toml
release/: Makefile  PKGBUILD  README.md  build.sh  install.sh  release.yml
release/artifacts/: SHA256SUMS
rmake/: Cargo.toml
rmake/src/: main.rs  manifest.rs
rmake/src/commands/: audit.rs  build.rs  clean.rs  deps.rs  diff.rs  info.rs  init.rs  install.rs  lint.rs  mod.rs  package.rs  publish.rs  rebuild.rs  sandbox.rs  sign.rs  submit.rs  sync.rs  test.rs  ui.rs  upload.rs  verify.rs  watch.rs
src/: analytics.rs  aur.rs  backend.rs  cli.rs  config.rs  core.rs  enhanced_aur.rs  flatpak.rs  gpg.rs  graph.rs  history.rs  hooks.rs  interactive.rs  lib.rs  lua.rs  main.rs  pacman.rs  profiles.rs  tap.rs  trust.rs  tui.rs  utils.rs
tests/: core_features.rs
