[package]
name = "reap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11.14", features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
ratatui = "0.26"
crossterm = "0.27"
mlua = { version = "0.9", features = ["lua54"] }
once_cell = "1.19"
dirs = "5"
diff = "0.1"
serde_json = "1"
chrono = "0.4"
ring = "=0.16.20"
rustls = "0.20"
rustls-webpki = "0.100"
sct = "0.6"
webpki = "0.22"
hyper-rustls = "0.23"
futures = "0.3"
regex = "1"
rayon = "1.10.0"
which = "8.0.0"
owo-colors = "4"
indicatif = "0.17"

